--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "class-variance-authority": "^0.5.2",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "dom-to-image": "^2.6.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "js-file-download": "^0.4.12",
+    "lucide-react": "^0.176.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
